# Serializer

./: .gitignore  Build.cpp  CMakeLists.txt  JSON.cpp  JSON.h  Object.cpp  Object.h  Serializer.h  makefile
JSON/: JsonDump.cpp  JsonParser.cpp
src/: Object.cpp  Object.h
src/JSON/: JsonDump.cpp  JsonDump.h  JsonParser.cpp  JsonParser.h
src/Serializer/: Object.cpp  Object.h  Serializer.cpp  Serializer.h
src/Serializer/CSV/: CsvParser.cpp  CsvParser.h
src/Serializer/JSON/: JsonDump.cpp  JsonDump.h  JsonParser.cpp  JsonParser.h
test/: test.cpp
tests/: test.cpp
tests/input/: test4.csv
